--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-16.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-16.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Amphenol, IBD Stock Of The Day, Showing Accelerating Growth
+  Amphenol, IBD Stock Of The Day, Showing Accelerating Growth	Amphenol 是当今 IBD 股票，呈现加速增长
 image: /assets/img/stock-of-the-day/2024-12-16.jpg
 date: 2024-12-16 16:40 -0800
 author: PATRICK SEITZ
