--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-18.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-18.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  ExlService, Stock of The Day, Transforming Into AI-Led Play	ExlService，今日股票，转型为 AI 主导的游戏
+  ExlService, Stock of The Day, Transforming Into AI-Led Play
 image: /assets/img/stock-of-the-day/2024-12-18.jpg
 date: 2024-12-18 16:00 -0800
 author: APARNA NARAYANAN
@@ -12,136 +12,52 @@ author: APARNA NARAYANAN
 
 
 
-**ExlService Holdings** ([EXLS](https://research.investors.com/quote.aspx?symbol=EXLS)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as it touts a shift in business strategy driving AI-fueled growth. On Wednesday, ExlService stock reversed sharply lower near a buy point amid a broader Fed-induced market reversal.[重试
-  
- 
+**ExlService Holdings** ([EXLS](https://research.investors.com/quote.aspx?symbol=EXLS)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as it touts a shift in business strategy driving AI-fueled growth. On Wednesday, ExlService stock reversed sharply lower near a buy point amid a broader Fed-induced market reversal.  
 
 
+Analysts moved price targets on EXLS stock sharply higher at the end of October, FactSet shows. That followed an earnings beat-and-raise from the **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) artificial intelligence partner.  
 
-错误原因](javascript:void(0))
 
+BPO To AI Play
+--------------
 
-Analysts moved price targets on EXLS stock sharply higher at the end of October, FactSet shows. That followed an earnings beat-and-raise from the **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) artificial intelligence partner.[重试
-  
- 
 
+"The ongoing execution of our data and AI-led strategy enabled us to accelerate our growth," EXL CEO Rohit Kapoor said in an Oct. 29 earnings release.  
 
 
-错误原因](javascript:void(0))
+The New York-based company says it continues to expand from business process outsourcing (BPO) to provider of data analytics, artificial intelligence (AI) and digital solutions. Its roster of partners includes Nvidia, **Amazon** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and other Big Tech names, as well as hot startups like Databricks.  
 
 
-BPO To AI Play[重试
-  
- 
 
 
+ExlService Stock Finds Key Support Near Buy Point
+-------------------------------------------------
 
-错误原因](javascript:void(0))
----------------------------------------------------
 
+Shares of ExlService turned lower on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/), shedding 3.1%. EXLS stock had been finding support at its 21-day exponential moving average but undercut that level Wednesday afternoon as the Fed signaled a slower pace of rate cuts.  
 
-"The ongoing execution of our data and AI-led strategy enabled us to accelerate our growth," EXL CEO Rohit Kapoor said in an Oct. 29 earnings release.[重试
-  
- 
 
+The AI play showed a 47.37 [buy point](https://www.investors.com/ibd-university/how-to-buy/) from a flat base, formed entirely above the 50-day moving average, according to [MarketSurge charts](https://marketsurge.investors.com). But it neared a test of the 50-day line into Wednesday's close.  
 
 
-错误原因](javascript:void(0))
+Shares closed around 7% below the entry, which marks the Nov. 27 record high.  
 
 
-The New York-based company says it continues to expand from business process outsourcing (BPO) to provider of data analytics, artificial intelligence (AI) and digital solutions. Its roster of partners includes Nvidia, **Amazon** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and other Big Tech names, as well as hot startups like Databricks.[重试
-  
- 
+The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) for ExlService stock has flattened out a bit after surging since June. If the RS line moves to new highs as the AI play tries to break out, it would send a positive signal. A rising RS line means that a stock is outperforming the S&P 500 index. It is the blue line in the chart provided.  
 
 
 
-错误原因](javascript:void(0))
+ExlService Earnings Acceleration
+--------------------------------
 
 
+The [IBD Stock Checkup tool](https://research.investors.com/stock-checkup/nasdaq-exlservice-holdings-exls.aspx) shows that ExlService stock earns a near-perfect [Composite Rating](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1) of 98 out of 99. The rating rolls various fundamental and technical metrics into one easy-to-use score.  
 
 
-ExlService Stock Finds Key Support Near Buy Point[重试
-  
- 
+Additionally, EXLS shows an RS Rating of 91 and EPS Rating of 95, also out of a best-possible 99.  
 
 
-
-错误原因](javascript:void(0))
---------------------------------------------------------------------------------------
-
-
-Shares of ExlService turned lower on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/), shedding 3.1%. EXLS stock had been finding support at its 21-day exponential moving average but undercut that level Wednesday afternoon as the Fed signaled a slower pace of rate cuts.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-The AI play showed a 47.37 [buy point](https://www.investors.com/ibd-university/how-to-buy/) from a flat base, formed entirely above the 50-day moving average, according to [MarketSurge charts](https://marketsurge.investors.com). But it neared a test of the 50-day line into Wednesday's close.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-Shares closed around 7% below the entry, which marks the Nov. 27 record high.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) for ExlService stock has flattened out a bit after surging since June. If the RS line moves to new highs as the AI play tries to break out, it would send a positive signal. A rising RS line means that a stock is outperforming the S&P 500 index. It is the blue line in the chart provided.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-
-ExlService Earnings Acceleration[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
----------------------------------------------------------------------
-
-
-The [IBD Stock Checkup tool](https://research.investors.com/stock-checkup/nasdaq-exlservice-holdings-exls.aspx) shows that ExlService stock earns a near-perfect [Composite Rating](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1) of 98 out of 99. The rating rolls various fundamental and technical metrics into one easy-to-use score.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-Additionally, EXLS shows an RS Rating of 91 and EPS Rating of 95, also out of a best-possible 99.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-The company boasts two quarters of accelerating earnings and sales growth.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
+The company boasts two quarters of accelerating earnings and sales growth.  
 
 
 In Q3, ExlService earnings swelled 19% as revenue rose 15%. Both outpaced views, FactSet shows. The Nvidia AI partner hiked guidance for the full year after delivering double-digit growth in Q3 across its data analytics business and digital operations business.  
