--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-20.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-20.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  AppLovin, IBD Stock Of The Day, Earns Positive Reviews For New Service
+  AppLovin, IBD Stock Of The Day, Earns Positive Reviews For New Service	AppLovin 是当今的 IBD 股票，新服务获得正面评价
 image: /assets/img/stock-of-the-day/2024-12-20.jpg
 date: 2024-12-20 18:24 -0800
 author: PATRICK SEITZ
