--- a/_columns/The_Big_Picture/zh-cn/2024-12-17.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-17.md
@@ -10,33 +10,15 @@ author: KEN SHREVE
 
 
 
-Sellers came into the stock market Tuesday as the two-day Federal Reserve meeting got underway. Several growth stocks came under heavy selling pressure again, although the signals were hard to find.[重试
-  
- 
+Sellers came into the stock market Tuesday as the two-day Federal Reserve meeting got underway. Several growth stocks came under heavy selling pressure again, although the signals were hard to find.
 
 
-
-错误原因](javascript:void(0))
-
-
-The Russell 2000 fared the worst with a decline of 1.2%. The small-cap index closed just above its 50-day moving average. The Dow Jones Industrial Average extended its losing streak to nine sessions and closed just below its 50-day line.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
+The Russell 2000 fared the worst with a decline of 1.2%. The small-cap index closed just above its 50-day moving average. The Dow Jones Industrial Average extended its losing streak to nine sessions and closed just below its 50-day line.
 
 
 
 
-The last time the Dow Jones fell for nine straight sessions was in 1978, according to Dow Jones data. **UnitedHealth Group** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) weighed on the blue-chip index with a loss of more than 3%. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) and **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) also lagged with losses of nearly 2%.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
+The last time the Dow Jones fell for nine straight sessions was in 1978, according to Dow Jones data. **UnitedHealth Group** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) weighed on the blue-chip index with a loss of more than 3%. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) and **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) also lagged with losses of nearly 2%.
 
 
 Selling also continued in the broad-based New York Stock Exchange composite index, which fell nearly 0.6% and marked its eighth loss in nine trading sessions. The NYSE composite fell further below its 50-day moving average after giving up the support level late last week.
