--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-17.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-17.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Fortinet, IBD Stock Of The Day, Leads Cybersecurity Industry Group Amid 70% Rally	Fortinet 是今日 IBD 股票，在上涨 70% 中领跑网络安全行业集团
+  Fortinet, IBD Stock Of The Day, Leads Cybersecurity Industry Group Amid 70% Rally
 image: /assets/img/stock-of-the-day/2024-12-17.jpg
 date: 2024-12-17 17:24 -0800
 author: RYAN DEFFENBAUGH
@@ -12,99 +12,89 @@ author: RYAN DEFFENBAUGH
 
 
 
-**Fortinet** ([FTNT](https://research.investors.com/quote.aspx?symbol=FTNT)) is the [IBD Stock of the Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) for Tuesday. Shares of the cybersecurity company are in a short [consolidation pattern](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/) that could become a [flat base](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-flat-base-dull-trade-positive-action/) by next week.  
-**Fortinet** （[FTNT）](https://research.investors.com/quote.aspx?symbol=FTNT) 是周二[的 IBD 股票](https://www.investors.com/category/research/ibd-stock-of-the-day/)。这家网络安全公司的股票处于短期[盘整模式](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/)，到下周可能会成为[平坦的基础](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-flat-base-dull-trade-positive-action/)。
+**Fortinet** ([FTNT](https://research.investors.com/quote.aspx?symbol=FTNT)) is the [IBD Stock of the Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) for Tuesday. Shares of the cybersecurity company are in a short [consolidation pattern](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/) that could become a [flat base](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-flat-base-dull-trade-positive-action/) by next week.
 
 
-On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/?), Fortinet stock dipped a fraction to close at 97.62. Shares of the Sunnyvale, Calif.-based company have rallied 67% this year, including a 16% gain since the company reported third-quarter earnings in early November. Fortinet is the top-ranked stock among the 85-stock Computer Software-Security group tracked by Investor's Business Daily.  
-[在今天的股市](https://www.investors.com/news/stock-market-today-stock-market-news/?)上，Fortinet 股票下跌一小幅，收于 97.62 点。这家总部位于加利福尼亚州桑尼维尔的公司股价今年上涨了 67%，其中自 11 月初该公司公布第三季度收益以来上涨了 16%。Fortinet 是 Investor's Business Daily 追踪的 85 只计算机软件安全股票中排名第一的股票。
+On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/?), Fortinet stock dipped a fraction to close at 97.62. Shares of the Sunnyvale, Calif.-based company have rallied 67% this year, including a 16% gain since the company reported third-quarter earnings in early November. Fortinet is the top-ranked stock among the 85-stock Computer Software-Security group tracked by Investor's Business Daily.
 
 
 
 
-Founded in 2000, Fortinet competes against **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)) and other firms in the firewall network security market, designed to block against online intrusions and other cyber threats. Fortinet also targets a growing market called Secure Access Service Edge. SASE rolls up a range of cybersecurity functions for enterprises to a single cloud-based package.  
-Fortinet 成立于 2000 年，在防火墙网络安全市场与 **Palo Alto Networks** （[PANW](https://research.investors.com/quote.aspx?symbol=PANW)） 和其他公司竞争，旨在阻止在线入侵和其他网络威胁。Fortinet 还瞄准了一个名为 Secure Access Service Edge 的不断增长的市场。SASE 将企业的一系列网络安全功能汇总到一个基于云的软件包中。
+Founded in 2000, Fortinet competes against **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)) and other firms in the firewall network security market, designed to block against online intrusions and other cyber threats. Fortinet also targets a growing market called Secure Access Service Edge. SASE rolls up a range of cybersecurity functions for enterprises to a single cloud-based package.
 
 
-Analysts See Fortinet Benefiting From 'Vendor Consolidation'分析师认为 Fortinet 将从“供应商整合”中受益
----------------------------------------------------------------------------------------
+Analysts See Fortinet Benefiting From 'Vendor Consolidation'
+------------------------------------------------------------
 
 
-Analysts project Fortinet's 2024 adjusted earnings will increase 38% to $2.25 per share while sales climb 11% to $5.9 billion. That's a slowdown from the 20% sales growth Fortinet posted in 2023 and 32% growth in 2022. The company's product revenue has slowed as companies have pulled back on network firewall spending.  
-分析师预计 Fortinet 2024 年调整后收益将增长 38% 至每股 2.25 美元，而销售额将攀升 11% 至 59 亿美元。这比 Fortinet 在 2023 年公布的 20% 和 2022 年的 32% 的销售增长有所放缓。随着公司缩减网络防火墙支出，该公司的产品收入放缓。
+Analysts project Fortinet's 2024 adjusted earnings will increase 38% to $2.25 per share while sales climb 11% to $5.9 billion. That's a slowdown from the 20% sales growth Fortinet posted in 2023 and 32% growth in 2022. The company's product revenue has slowed as companies have pulled back on network firewall spending.
 
 
-Competition is [also increasing](https://www.investors.com/news/technology/ai-artificial-intelligence-cybersecurity-stocks/) as companies look to provide a broader cybersecurity platform across several services.  
-随着公司希望为多种服务提供更广泛的网络安全平台，竞争[也日益激烈](https://www.investors.com/news/technology/ai-artificial-intelligence-cybersecurity-stocks/)。
+Competition is [also increasing](https://www.investors.com/news/technology/ai-artificial-intelligence-cybersecurity-stocks/) as companies look to provide a broader cybersecurity platform across several services.
 
 
-But Fortinet stock jumped 10% on Nov. 8 following a [third-quarter earnings report](https://www.investors.com/news/technology/fortinet-stock-fortinet-earnings-q32024-revenue-billings-top-estimates/) that beat expectations for both earnings and sales. Later in November, Fortinet [hosted an analyst presentation](https://www.investors.com/news/technology/fortinet-stock-investor-day-firewall-market/) that led to a mostly positive reception from Wall Street.  
-但 Fortinet 股价在 11 月 8 日上涨 10%，此前第三[季度收益报告](https://www.investors.com/news/technology/fortinet-stock-fortinet-earnings-q32024-revenue-billings-top-estimates/)和销售额均超出预期。11 月下旬，Fortinet [举办了一场分析师演讲](https://www.investors.com/news/technology/fortinet-stock-investor-day-firewall-market/)，华尔街对此大多表示好评。
+But Fortinet stock jumped 10% on Nov. 8 following a [third-quarter earnings report](https://www.investors.com/news/technology/fortinet-stock-fortinet-earnings-q32024-revenue-billings-top-estimates/) that beat expectations for both earnings and sales. Later in November, Fortinet [hosted an analyst presentation](https://www.investors.com/news/technology/fortinet-stock-investor-day-firewall-market/) that led to a mostly positive reception from Wall Street.
 
 
-"Even though there were no new product announcements, we came away incrementally more positive from the conference as it is one of the best positioned security companies to benefit from vendor consolidation based on its product breadth, in our opinion," Truist analyst Junaid Siddiqui said in a note to clients following the Nov. 18 presentation. "We continue to be impressed with the company's pace of innovation and favor its balanced approach between growth and profitability."  
-Truist 分析师 Junaid Siddiqui 在 11 月 18 日演讲后给客户的一份报告中表示：“尽管没有发布新产品，但我们从会议中逐渐变得更加积极，因为我们认为，根据其产品广度，它是最有可能从供应商整合中受益的安全公司之一。“我们继续对公司的创新速度印象深刻，并赞成其在增长和盈利能力之间的平衡方法。”
+"Even though there were no new product announcements, we came away incrementally more positive from the conference as it is one of the best positioned security companies to benefit from vendor consolidation based on its product breadth, in our opinion," Truist analyst Junaid Siddiqui said in a note to clients following the Nov. 18 presentation. "We continue to be impressed with the company's pace of innovation and favor its balanced approach between growth and profitability."
 
 
-Truist reiterated a buy rating for Fortinet stock with its report. Analysts at BofA Securities also rate Fortinet stock a buy and were positive overall on the analyst presentation last month.  
-Truist 在其报告中重申了对 Fortinet 股票的买入评级。美银证券的分析师也将 Fortinet 股票评为买入，并在上个月的分析师报告中总体持积极态度。
+Truist reiterated a buy rating for Fortinet stock with its report. Analysts at BofA Securities also rate Fortinet stock a buy and were positive overall on the analyst presentation last month.
 
 
-"On the one hand, management did not provide guidance for 2025, driving some uncertainty about the magnitude of the upcoming firewall refresh cycle," BofA analyst Tal Liani said in a Nov. 19 note. "On the other hand, (Fortinet's) three- to five-year guidance targets are solid, and we see room for upside vs. (Wall) Street estimates for 6.6% product revenue growth in 2025."  
-“一方面，管理层没有为 2025 年提供指导，这为即将到来的防火墙更新周期的幅度带来了一些不确定性，”美国银行分析师 Tal Liani 在 11 月 19 日的一份报告中表示。“另一方面，（Fortinet）的三到五年指导目标是可靠的，与（华尔）华尔街估计的 2025 年产品收入增长 6.6% 相比，我们看到了上行空间。”
+"On the one hand, management did not provide guidance for 2025, driving some uncertainty about the magnitude of the upcoming firewall refresh cycle," BofA analyst Tal Liani said in a Nov. 19 note. "On the other hand, (Fortinet's) three- to five-year guidance targets are solid, and we see room for upside vs. (Wall) Street estimates for 6.6% product revenue growth in 2025."
 
 
-Analysts are mostly neutral on the stock overall, however. There are 42 analysts following Fortinet, according to FactSet, with 16 holding a buy or equivalent rating. Meanwhile, 25 analysts are neutral and one analyst holds a sell call.  
-然而，分析师对该股的整体看法大多是中性的。根据 FactSet 的数据，有 42 位分析师关注 Fortinet，其中 16 位持有买入或同等评级。同时，25 位分析师持中立态度，1 位分析师持有卖出看涨期权。
+Analysts are mostly neutral on the stock overall, however. There are 42 analysts following Fortinet, according to FactSet, with 16 holding a buy or equivalent rating. Meanwhile, 25 analysts are neutral and one analyst holds a sell call.
 
 
-Guggenheim analyst John DiFucci, for example, wrote following the analyst day that Fortinet is a "strong technology company" but he "cannot ignore the fact that business momentum has deteriorated in each of the last eight quarters." He kept to a neutral call.  
+Guggenheim analyst John DiFucci, for example, wrote following the analyst day that Fortinet is a "strong technology company" but he "cannot ignore the fact that business momentum has deteriorated in each of the last eight quarters." He kept to a neutral call.
 
 
 Fortinet Stock On IBD 50 List
 -----------------------------
 
 
-Meanwhile, Fortinet stock is on the [IBD 50](https://www.investors.com/category/stock-lists/ibd-50/) flagship list of growth stocks. It has strong ratings by several metrics.  
+Meanwhile, Fortinet stock is on the [IBD 50](https://www.investors.com/category/stock-lists/ibd-50/) flagship list of growth stocks. It has strong ratings by several metrics.
 
 
-Fortinet stock holds a best-possible Composite Rating of 99, according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/nasdaq-manhattan-associates-manh.aspx). IBD's [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-invest-stocks-to-buy-composite-rating/) combines five separate proprietary ratings into one easy-to-use rating. The best growth stocks typically have a Composite Rating of 90 or better.  
+Fortinet stock holds a best-possible Composite Rating of 99, according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/nasdaq-manhattan-associates-manh.aspx). IBD's [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-invest-stocks-to-buy-composite-rating/) combines five separate proprietary ratings into one easy-to-use rating. The best growth stocks typically have a Composite Rating of 90 or better.
 
 
-Another positive indicator is that shares hold a Relative Strength Rating of 92 out of a best-possible 99.  
+Another positive indicator is that shares hold a Relative Strength Rating of 92 out of a best-possible 99.
 
 
-Even with some challenges with its sales growth, Fortinet has posted strong earnings results, as shown in its best-possible [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/) of 99.  
+Even with some challenges with its sales growth, Fortinet has posted strong earnings results, as shown in its best-possible [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/) of 99.
 
 
-Meanwhile, the Computer Software-Security group ranks No. 85 out of 197 industry groups that IBD tracks. Read more about IBD's industry group [approach here](https://www.investors.com/how-to-invest/investors-corner/top-industry-groups-beget-top-stocks/).  
+Meanwhile, the Computer Software-Security group ranks No. 85 out of 197 industry groups that IBD tracks. Read more about IBD's industry group [approach here](https://www.investors.com/how-to-invest/investors-corner/top-industry-groups-beget-top-stocks/).
 
 
-Other cybersecurity stocks have made recent moves as well. **CrowdStrike** ([CRWD](https://research.investors.com/quote.aspx?symbol=CRWD)) on Monday broke out past an alternate handle buy point of 377.42. **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)) and **Zscaler** ([ZS](https://research.investors.com/quote.aspx?symbol=ZS)) are setting up chart bases as well.  
+Other cybersecurity stocks have made recent moves as well. **CrowdStrike** ([CRWD](https://research.investors.com/quote.aspx?symbol=CRWD)) on Monday broke out past an alternate handle buy point of 377.42. **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)) and **Zscaler** ([ZS](https://research.investors.com/quote.aspx?symbol=ZS)) are setting up chart bases as well.
 
 
-You can read more here on cybersecurity trends and [stocks to watch in 2025](https://www.investors.com/news/technology/cybersecurity-stocks/).  
+You can read more here on cybersecurity trends and [stocks to watch in 2025](https://www.investors.com/news/technology/cybersecurity-stocks/).
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE:**
 
 
-[How Oracle Got Its Mojo Back. What's Behind The AI Cloud Push Powering Its 80% Stock Gain.](https://www.investors.com/news/technology/oracle-stock-orcl-ai-cloud-larry-ellison/) 
+[How Oracle Got Its Mojo Back. What's Behind The AI Cloud Push Powering Its 80% Stock Gain.](https://www.investors.com/news/technology/oracle-stock-orcl-ai-cloud-larry-ellison/)
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A) 
+[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-[Get Timely Buy & Sell Alerts With IBD Leaderboard](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) 
+[Get Timely Buy & Sell Alerts With IBD Leaderboard](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)
 
 
-[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
+[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Hawkish Fed Rate Cut Due As Market Slides](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-hawkish-fed-rate-cut-nvidia-tesla/) 
+[Hawkish Fed Rate Cut Due As Market Slides](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-hawkish-fed-rate-cut-nvidia-tesla/)
 
 
 
