--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-19.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-19.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  GE Vernova, IBD Stock Of The Day Is Up 130% Since General Electric Spin Off. It's Making A Bullish Move.	自通用电气分拆以来，IBD 今日股票 GE Vernova 上涨了 130%。它正在采取看涨的举动。
+  GE Vernova, IBD Stock Of The Day Is Up 130% Since General Electric Spin Off. It's Making A Bullish Move.
 image: /assets/img/stock-of-the-day/2024-12-19.jpg
 date: 2024-12-19 16:30 -0800
 author: KIT NORTON
@@ -12,37 +12,31 @@ author: KIT NORTON
 
 
 
-**GE Vernova** ([GEV](https://research.investors.com/quote.aspx?symbol=GEV)) is Thursday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the S&P 500 component rebounded off a key level, offering investors a buy opportunity.  
-**GE Vernova** （[GEV](https://research.investors.com/quote.aspx?symbol=GEV)） 是周四的 [IBD 今日股票](https://www.investors.com/category/research/ibd-stock-of-the-day/)，因为标准普尔 500 指数成分股从关键水平反弹，为投资者提供了买入机会。
+**GE Vernova** ([GEV](https://research.investors.com/quote.aspx?symbol=GEV)) is Thursday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the S&P 500 component rebounded off a key level, offering investors a buy opportunity.
 
 
-Last week, GEV stock received several price target hikes after GE Vernova, announced a $1 annual dividend and a $6 billion share buyback program at its Dec. 10 investor day event. It's part of its strategy to return at least a third of free cash flow to shareholders.  
-上周，在 GE Vernova 在 12 月 10 日的投资者日活动中宣布 1 美元的年度股息和 60 亿美元的股票回购计划后，GEV 股票的目标价多次上调。将至少三分之一的自由现金流返还给股东是其战略的一部分。
+Last week, GEV stock received several price target hikes after GE Vernova, announced a $1 annual dividend and a $6 billion share buyback program at its Dec. 10 investor day event. It's part of its strategy to return at least a third of free cash flow to shareholders.
 
 
-The company also revised 2025 revenue guidance, expecting $36 billion to $37 billion, narrowed from its previous $35 billion to $37 billion range. GEV also forecasts high-single digit revenue growth in 2028, up from its previous mid-single digit growth projections.  
-该公司还修改了 2025 年收入指引，预计为 360 亿美元至 370 亿美元，从之前的 350 亿美元至 370 亿美元范围缩小。GEV 还预测 2028 年的收入将出现高个位数增长，高于之前的中个位数增长预测。
+The company also revised 2025 revenue guidance, expecting $36 billion to $37 billion, narrowed from its previous $35 billion to $37 billion range. GEV also forecasts high-single digit revenue growth in 2028, up from its previous mid-single digit growth projections.
 
 
 
 
-Free cash projections for 2025 are now $2 billion to $2.5 billion compared to GE Vernova's earlier $1.2 billion to $1.8 billion view.  
-对 2025 年的自由现金预测现在为 20 亿至 25 亿美元，而 GE Vernova 此前的观点为 12 亿至 18 亿美元。
+Free cash projections for 2025 are now $2 billion to $2.5 billion compared to GE Vernova's earlier $1.2 billion to $1.8 billion view.
 
 
-'Top Pick' Designation  “首选”称号
-------------------------------
+'Top Pick' Designation
+----------------------
 
 
-Following the investor day, Jefferies analyst Julien Dumoulin-Smith raised the firm's price target on GE Vernova to 391 from 348, maintaining a buy rating. Wells Fargo also raised its price target on GEV to 411 from 385.  
-投资者日之后，Jefferies 分析师 Julien Dumoulin-Smith 将该公司对 GE Vernova 的目标价从 348 上调至 391，维持买入评级。富国银行还将 GEV 的目标价从 385 上调至 411。
+Following the investor day, Jefferies analyst Julien Dumoulin-Smith raised the firm's price target on GE Vernova to 391 from 348, maintaining a buy rating. Wells Fargo also raised its price target on GEV to 411 from 385.
 
 
-William Blair analyst Jed Dorsheimer last week even proclaimed that GE Vernova was a "top pick" for 2025, with natural gas set to play an important role as technology companies pour resources into artificial intelligence and the data centers needed to train the programs.  
-William Blair 分析师 Jed Dorsheimer 上周甚至宣称，GE Vernova 是 2025 年的“首选”，随着科技公司将资源投入人工智能和训练项目所需的数据中心，天然气将发挥重要作用。
+William Blair analyst Jed Dorsheimer last week even proclaimed that GE Vernova was a "top pick" for 2025, with natural gas set to play an important role as technology companies pour resources into artificial intelligence and the data centers needed to train the programs.
 
 
-The analyst believes natural gas will be the "workhorse for near- and medium-term electricity load growth for the AI data-center build out" in 2025. Dorsheimer added that GE Vernova, which produces the turbines to drive natural gas-fired generators, is the "largest beneficiary of shift back to natural gas."  
+The analyst believes natural gas will be the "workhorse for near- and medium-term electricity load growth for the AI data-center build out" in 2025. Dorsheimer added that GE Vernova, which produces the turbines to drive natural gas-fired generators, is the "largest beneficiary of shift back to natural gas."
 
 
 
@@ -50,7 +44,7 @@ The analyst believes natural gas will be the "workhorse for near- and medium-ter
 ---
 
 
-[**Best IBD 50 Stocks To Watch**](https://www.investors.com/research/ibd-50-growth-stocks-to-watch) 
+[**Best IBD 50 Stocks To Watch**](https://www.investors.com/research/ibd-50-growth-stocks-to-watch)
 
 
 
@@ -58,63 +52,61 @@ The analyst believes natural gas will be the "workhorse for near- and medium-ter
 ---
 
 
-Meanwhile, GE Vernova Chief Executive Scott Strazik told Bloomberg last week that Big Tech companies are reserving gas turbines, for 5-gigawatt data center campuses. In the last 30 days alone, GE Vernova has signed 9 gigawatts of reservations for gas turbines from customers including data center developers, Strazik told Bloomberg.  
+Meanwhile, GE Vernova Chief Executive Scott Strazik told Bloomberg last week that Big Tech companies are reserving gas turbines, for 5-gigawatt data center campuses. In the last 30 days alone, GE Vernova has signed 9 gigawatts of reservations for gas turbines from customers including data center developers, Strazik told Bloomberg.
 
 
 S&P 500: GE Vernova Performance
 -------------------------------
 
 
-GE Vernova popped 4.9% to 332.8- during [market trade](https://www.investors.com/category/market-trend/stock-market-today/) on Thursday, rebounding from its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) after slipping 3.4% in Wednesday's market sell-off. The S&P 500 stock appears to be trying to get back above its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/).  
+GE Vernova popped 4.9% to 332.8- during [market trade](https://www.investors.com/category/market-trend/stock-market-today/) on Thursday, rebounding from its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) after slipping 3.4% in Wednesday's market sell-off. The S&P 500 stock appears to be trying to get back above its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/).
 
 
-Investors could use the bounce off the 50-day line as an [entry](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/), perhaps just above the 21-day line but should move forward with caution in the current market environment.  
-
-
-
-GEV stock hit an all-time high on Nov. 21, of 357.09, according to [MarketSurge chart analysis](https://marketsurge.investors.com/). The stock broke out of a seven-week base in mid-August. Shares are up more than 80% from that breakout. GEV shares have been one of the top performers in the S&P 500 this year.  
-
-
-Meanwhile, the 56 stocks in the [IBD tracked Energy-Alternative/Other](https://marketsurge.investors.com/) industry group have collectively gained more than 35% in 2024.  
-
-
-GEV stock has been consolidating for a few weeks, with a possible flat base at the end of next week.  
+Investors could use the bounce off the 50-day line as an [entry](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/), perhaps just above the 21-day line but should move forward with caution in the current market environment.
 
 
 
-In October, GEV [reported worse-than-expected third-quarter](https://www.investors.com/news/ge-vernova-earnings-gev-stock/) profit as it continued to see "incremental contract losses" from its offshore wind business.  
+GEV stock hit an all-time high on Nov. 21, of 357.09, according to [MarketSurge chart analysis](https://marketsurge.investors.com/). The stock broke out of a seven-week base in mid-August. Shares are up more than 80% from that breakout. GEV shares have been one of the top performers in the S&P 500 this year.
 
 
-GE Vernova emerged from General Electric's big, long-term breakup earlier this year, with spinouts of **GE Aerospace** ([GE](https://research.investors.com/quote.aspx?symbol=GE)) and **GE HealthCare Technologies** ([GEHC](https://research.investors.com/quote.aspx?symbol=GEHC)). GE Aerospace kept the GE ticker symbol.  
+Meanwhile, the 56 stocks in the [IBD tracked Energy-Alternative/Other](https://marketsurge.investors.com/) industry group have collectively gained more than 35% in 2024.
 
 
-Before the spinouts, the former General Electric shed a number of assets and operations over a series of years, from lighting to locomotives. In November 2017, [GE began signaling the breakup process amid financial troubles](https://www.investors.com/news/general-electric-may-sell-this-fantastic-business-as-rivals-gain/).  
+GEV stock has been consolidating for a few weeks, with a possible flat base at the end of next week.
 
 
-GE Vernova stock has an 85 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/) out of a best-possible 99. The S&P 500 component also has a 97 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) and a 61 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).  
+
+In October, GEV [reported worse-than-expected third-quarter](https://www.investors.com/news/ge-vernova-earnings-gev-stock/) profit as it continued to see "incremental contract losses" from its offshore wind business.
 
 
-*Please follow Kit Norton on X [@KitNorton](https://twitter.com/KitNorton) for more coverage.* 
+GE Vernova emerged from General Electric's big, long-term breakup earlier this year, with spinouts of **GE Aerospace** ([GE](https://research.investors.com/quote.aspx?symbol=GE)) and **GE HealthCare Technologies** ([GEHC](https://research.investors.com/quote.aspx?symbol=GEHC)). GE Aerospace kept the GE ticker symbol.
+
+
+Before the spinouts, the former General Electric shed a number of assets and operations over a series of years, from lighting to locomotives. In November 2017, [GE began signaling the breakup process amid financial troubles](https://www.investors.com/news/general-electric-may-sell-this-fantastic-business-as-rivals-gain/).
+
+
+GE Vernova stock has an 85 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/) out of a best-possible 99. The S&P 500 component also has a 97 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) and a 61 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).
+
+
+*Please follow Kit Norton on X [@KitNorton](https://twitter.com/KitNorton) for more coverage.*
 
 
 #### **YOU MAY ALSO LIKE:**
 
 
-[Is Tesla Stock A Buy Or A Sell?](https://www.investors.com/news/tesla-stock-a-buy-or-a-sell-in-2024/) 
+[Is Tesla Stock A Buy Or A Sell?](https://www.investors.com/news/tesla-stock-a-buy-or-a-sell-in-2024/)
 
 
-[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital) 
+[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Learning How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/) 
+[Learning How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.  
-AI 正在推动“核复兴”。比尔·盖茨 （Bill Gates） 和杰夫·贝佐斯 （Jeff Bezos） 也在其中。](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/)
+[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/)
 
 
-[The Lithium Price Cycle Has Bottomed. What To Expect Next For These Stocks.  
-锂价周期已经触底。这些股票的下一步期待。](https://www.investors.com/news/lithium-stocks-prices-mining-industry/)
+[The Lithium Price Cycle Has Bottomed. What To Expect Next For These Stocks.](https://www.investors.com/news/lithium-stocks-prices-mining-industry/)
 
 
 
